# ai-pm-manager-v2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  forge.config.js  package.json  pyproject.toml  requirements.txt  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.claude/commands/: aipm-backlog-add.md  aipm-backlog-to-order.md  aipm-dashboard-update.md  aipm-full-auto.md  aipm-log-stream.md  aipm-pm.md  aipm-recover.md  aipm-release-review.md  aipm-release.md  aipm-restore.md  aipm-review.md  aipm-rollback.md  aipm-status.md  aipm-supervisor.md  aipm-worker.md  aipm.md  template.md
PROJECTS/ai_pm_manager_v2/: PROJECT_INFO.md
backend/: README_DB_SCRIPTS.md  aipm-portfolio.html  db_auto_init.py  db_check.py  db_init.py  db_migrate.py  review_worker.py
backend/backlog/: __init__.py  add.py  auto_done.py  bulk_cleanup.py  get.py  list.py  prioritize.py  reorder.py  suggest.py  to_order.py  update.py
backend/base/: __init__.py  base_script.py
backend/bugs/: __init__.py  add.py  list.py  record_fix.py  update.py
backend/checkpoint/: __init__.py  create.py
backend/config/: __init__.py  db_config.py  log_rotation_config.py  permission_profiles.json  permission_profiles.py  resolve_path.py  worker_config.py
backend/cost/: __init__.py  cost_report.py  cost_tracker.py  model_selector.py  task_complexity.py
cli/: .gitkeep
data/: schema_v2.sql
scripts/: README_migrate_project_info.md  migrate_all_projects.py  migrate_project_info.py
src/: App.tsx  global.d.ts  index.css  index.html  main.ts  preload.ts  renderer.tsx
(+459 files in other folders)
